--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -17,6 +17,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -111,11 +114,13 @@
                                 placeholder="0815 243 5263">
 
                         </div>
-                        <hr>
+                        <!-- confirm password -->
+
                         <input type="password" class="input p"
                             style="font-size: smaller; font-weight: lighter; text-transform: uppercase;" name="password"
                             id="password" placeholder="create a password">
-                        <hr>
+
+
                         <button class="btn">SIGN IN</button>
                     </form>
                 </div>
@@ -155,6 +160,9 @@
                     <img class="socialicons" src="/assest/OLIVE/clarity_email-outline-badged.png" />
                 </div>
             </footer>
+        </section>
+        <section class="last">
+            <div></div>
         </section>
 
         <div class="bottom"></div>
