--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -47,6 +47,7 @@ body{
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color:#F9F9F9 ;
    
 
 }
@@ -379,4 +380,13 @@ border-radius: 10px;
 .brand{
     margin:-5px ;
     background-color: #000;
+}
+.last{
+    margin-top: 50px;
+
+    background-color: #801315;
+    height: 10%;
+    width: 100%;
+    padding: 4px;
+
 }
