--- a/views/provider/auditions.ejs
+++ b/views/provider/auditions.ejs
@@ -310,13 +310,17 @@
         <!-- Left Sidebar -->
         <aside id="leftsidebar" class="sidebar">
             <!-- User Info -->
-            <div class="user-info" style="background-color: #FF9800 !important; background-image: none;">
+            <div class="user-info" style="">
                 <div class="image">
-                    <img src="../../images/user.png" width="48" height="48" alt="User" />
+                    <img src="<%= provider.logo %> " width="48" height="48" alt="User" />
                 </div>
                 <div class="info-container">
-                    <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">John Doe</div>
-                    <div class="email">john.doe@example.com</div>
+                    <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <%= provider.username %>
+                    </div>
+                    <div class="email">
+                        <%= provider.email %>
+                    </div>
                     <div class="btn-group user-helper-dropdown">
                         <i class="material-icons" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="true">keyboard_arrow_down</i>
@@ -376,10 +380,8 @@
         <section class="content">
             <div class="container-fluid">
                 <div class="block-header">
-                    <h2>
-                        JQUERY DATATABLES
-                        <small>Taken from <a href="https://datatables.net/" target="_blank">datatables.net</a></small>
-                    </h2>
+                    <h2>AUDITIONS</h2>
+
                 </div>
 
                 <div class="row clearfix">
@@ -387,7 +389,7 @@
                         <div class="card">
                             <div class="header">
                                 <h2>
-                                    EXPORTABLE TABLE
+                                    AUDITION TABLE
                                 </h2>
                                 <ul class="header-dropdown m-r--5">
                                     <li class="dropdown">
