--- a/views/provider/partials/header.ejs
+++ b/views/provider/partials/header.ejs
@@ -93,7 +93,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="../../index.html">Olive Logo</a>
+                <a class="navbar-brand" href="/provider/dashboard">Olive Logo</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -353,11 +353,11 @@
                         </a>
                     </li>
 
-                    <li>
+                    <!-- <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons">trending_down</i>
                             <span>Multi Level Menu</span>
-                        </a>
+                        </a> -->
 
             </div>
             <!-- #Menu -->
