--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -78,7 +78,7 @@
 
         </section>
         <section class="content">
-            <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
+            <h4 class="">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
                 <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
                 enthusiasts
@@ -93,8 +93,8 @@
 
                 <div class="phoneInput">
                     <h4 class="form content_header">JOIN FREE OR <a href='/login'>SIGN IN</a>
-                        <hr>
                     </h4>
+                    <img src="/assest/OLIVE/Line 2.png" alt="">
                     <form id="form" class="numberform">
                         <div class="flex-form">
                             <!-- <select>
@@ -110,28 +110,32 @@
                             </label>
 
 
-                            <input type="number" name="username" id="username" class="input"
-                                placeholder="0815 243 5263">
+                            <input type="number" name="username" id="username" class="input" placeholder="0815 243 5263"
+                                autocomplete="of">
 
                         </div>
+
                         <!-- confirm password -->
 
                         <input type="password" class="input p"
                             style="font-size: smaller; font-weight: lighter; text-transform: uppercase;" name="password"
                             id="password" placeholder="create a password">
+                        <img src="/assest/OLIVE/Line 2.png" alt="">
 
 
-                        <button class="btn">SIGN IN</button>
-                    </form>
                 </div>
+                <button class="btn">SIGN IN</button>
                 <p>*By continuing you accept the Promoflo network and OLIVE Terms and Privacy Policy.</p>
                 <p>or <span>LOG IN</span> with </p>
+                </form>
             </div>
             <div class="otp_content">
                 <form id="otp">
-                    <h4 class="otp content_header">Verify your Phone number</h4>
+                    <h4 class="otp ">Verify your Phone number</h4>
                     <h5>Enter your OTP code here</h5>
                     <br>
+                    <br>
+
                     <div class="otp">
                         <input type="text" name="one" id="one" maxlength="1">
                         <input type="text" name="two" id="two" maxlength="1">
@@ -139,8 +143,8 @@
                         <input type="text" name="four" id="four" maxlength="1">
                         <input type="text" name="five" id="five" maxlength="1">
                     </div>
-
-
+                    <br>
+                    <br>
                     <button type="submit" class="btn">SIGN IN</button>
 
                 </form>
@@ -156,9 +160,10 @@
                     <img class="socialicons" src="/assest/OLIVE/flat-color-icons_google.png" />
                 </div>
                 <div class="mail">
-                    <img src="/assest/OLIVE/Ellipse.png" />
+                    <img src="/assest/OLIVE/Ellipse 2.png" />
                     <img class="socialicons" src="/assest/OLIVE/clarity_email-outline-badged.png" />
                 </div>
+
             </footer>
         </section>
         <section class="last">
