--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -1,6 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *{
     margin: 0;
@@ -156,29 +154,28 @@ header{
     gap: 20px;
 }
 .content_header{
-    font-family: Lato;
-    font-style: normal;
-    font-weight: 900;
+/* font-weight:900  !important; */
+    color: #801315;
+    line-height: 23px;
+    font-weight: bolder ;
     font-size: 18px;
-    line-height: 22px;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
-
 .content_text{
-height: 252px;
-font-size: 18px;
-line-height: 36px;
+    height: 252px;
+    font-size: 18px;
+    line-height: 36px;
+
 font-family: Lato;
 font-style: normal;
 font-weight: 800;
 font-size: 18px;
 line-height: 36px;
-text-align: center;
-color: #000000;
+/* or 200% */
 
-}
-.swiper-scrollbar{
-    display: none;
+text-align: center;
+
+color: #000000;
 }
 .content_text strong{
     font-weight: bolder !important;
@@ -205,12 +202,18 @@ color: #000000;
     padding-bottom: 10px;
 }
 .btn{
-width: 366px;
-height: 50px;
-background: #801315;
-border-radius: 5px;
-color: #FFFFFF;
-border: none;
+    text-transform: uppercase;
+    background: #801315;
+    width: 366px;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 10px;
+    color: #fff;
+    outline: none;
+    box-shadow: none;
+    border:none;
+
+
 }
 .phoneInput > *{
     /* display: flex;
@@ -349,7 +352,10 @@ background-color: #801315;
     
 }
 
-
+.bo{
+    width: 147px;
+height: 147px;
+}
 .box{
     width: 150px;
 height: 110px;
@@ -382,7 +388,7 @@ border-radius: 10px;
     margin-top: 50px;
 
     background-color: #801315;
-    height: 8px;
+    height: 4px;
     width: 100%;
     padding: 4px;
 
